speakers: add links, fix chromium overflow:hidden

--- a/src/assets/scss/components/_components-ctalink.scss
+++ b/src/assets/scss/components/_components-ctalink.scss
@@ -4,7 +4,9 @@
   text-decoration: underline;
   text-decoration-thickness: 2px;
   text-decoration-color: var(--color-accent);
-  text-decoration-style: wavy;
-  text-underline-offset: 6px;
+  text-decoration-style: solid;
+  text-underline-offset: 9px;
   color: var(--color-text-main);
+
+  transition: text-decoration-color 0.2s ease-out;
 }
